--- a/examples/todomvc/index.html
+++ b/examples/todomvc/index.html
@@ -3,14 +3,14 @@
     <head>
         <meta charset="utf-8">
         <title></title>
-        <link rel="stylesheet" href="./link/assets/css/amazeui.min.css" media="screen" title="no title" charset="utf-8">
-        <link rel="stylesheet" href="./style/css/index.main.css">
+        <link rel="stylesheet" href="./app/link/assets/css/amazeui.min.css" media="screen" title="no title" charset="utf-8">
+        <link rel="stylesheet" href="./source/css/index.main.css">
     </head>
     <body>
         <div id="container"></div>
-        <script src="./link/base.library.js" charset="utf-8"></script>
-        <script src="./link/template.js" charset="utf-8"></script>
-        <script src="./js/common.js" charset="utf-8"></script>
-        <script src="./js/index.main.js" charset="utf-8"></script>
+        <script src="./app/link/base.library.js" charset="utf-8"></script>
+        <script src="./app/link/template.js" charset="utf-8"></script>
+        <script src="./source/common.js" charset="utf-8"></script>
+        <script src="./source/index.main.js" charset="utf-8"></script>
     </body>
 </html>
